argocd/infra/velero/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: velero
spec:
  endpointSelector:
    matchExpressions:
      - key: name
        operator: In
        values:
          - velero
          - node-agent
  ingress: 
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8085"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: velero
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
